--- a/Andrey_Lavrov/flex/Content/css/style.css
+++ b/Andrey_Lavrov/flex/Content/css/style.css
@@ -10,26 +10,27 @@
  main, .forecast-block {
 	box-sizing: border-box;
 }
-.forecast-blocks {
-	padding: 96px 94px;
+
+.forecast-blocks {	
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	align-content: center;
+	justify-content: center;
 }
 
 .main-container {
 	margin: auto;
 	background-image: url(../Images/background.png);
 	background-position: center;
-	background-size: auto;	
-	height: 600px;
-	width: 800px;	
-	text-transform: uppercase;	
+	background-size: cover;	
+	height: auto;
+	width: 90%;		
+	text-transform: uppercase;		
 }
  .forecast-block {
 	display: block;
-	margin: 0;
-	width: 204px;
+	margin: 0;	
 	height: 204px;
 	background-color: #06B3DB;	
 	text-align: center;
@@ -119,3 +120,31 @@
 	color: #ffffff;
 	font-size: 12px;	
 } 
+
+
+@media screen and (min-width: 799px) {
+	.forecast-block {
+	  width: 25.5%;	  
+	}
+	.forecast-blocks {
+		padding-bottom: 50px;
+		padding-top: 50px;
+	}
+  }
+  @media screen and (min-width: 576px) and (max-width: 799px) {
+	.forecast-block {
+	  width: 33.3%;
+	}
+	.main-container {
+		width: 100%;
+	}
+  }
+  @media screen and (max-width: 576px) {
+	.forecast-block {
+	  width: 100%;
+	}
+	.main-container {
+		width: 100%;
+	}
+  }
+  
