--- a/Andrey Storozhko/weather-widget-flexbox/src/js/components/City/City.scss
+++ b/Andrey Storozhko/weather-widget-flexbox/src/js/components/City/City.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/mixins';
+
 .city {
   display: flex;
   flex-direction: column;
@@ -16,9 +18,23 @@
     color: white;
     font-size: 60px;
     padding-top: 45px;
+    @include tablets(){
+      font-size: 80px;
+      padding-top: 65px;
+    }
+    @include phones(){
+      font-size: 60px;
+      padding-top: 45px;
+    }
     &--is-open{
       color: white;
       font-size: 40px;
+      @include tablets(){
+        font-size: 60px;
+      }
+      @include phones(){
+        font-size: 40px;
+      }
     }
   }
   &__main{
@@ -26,6 +42,14 @@
     display: flex;
     color: white;
     padding-top: 45px;
+    @include tablets(){
+      font-size: 1.5rem;
+      padding-top: 65px;
+    }
+    @include phones(){
+      font-size: 0.9rem;
+      padding-top: 45px;
+    }
     &--is-hidden{
       display: none;
     }
