--- a/Andrey Storozhko/weather-widget-flexbox/src/js/components/List/List.scss
+++ b/Andrey Storozhko/weather-widget-flexbox/src/js/components/List/List.scss
@@ -25,14 +25,38 @@
   align-items: center;
   &__name,&__temp {
     font-size: 0.75rem;
+    @include tablets(){
+      font-size: 1.2rem;
+    }
+    @include phones(){
+      font-size: 0.75rem;
+    }
   }
   &__name{
     padding-bottom: 10px;
+    @include tablets(){
+      padding-bottom: 20px;
+    }
+    @include phones(){
+      padding-bottom: 10px;
+    }
   }
   &__temp{
     padding-top: 10px;
+    @include tablets(){
+      padding-top: 20px;
+    }
+    @include phones(){
+      padding-top: 10px;
+    }
   }
   &__weather{
     font-size: 15px;
+    @include tablets(){
+      font-size: 25px;
+    }
+    @include phones(){
+      font-size: 15px;
+    }
   }
 }
