--- a/Andrey Storozhko/weather-widget-float/src/scss/style.scss
+++ b/Andrey Storozhko/weather-widget-float/src/scss/style.scss
@@ -11,13 +11,17 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
 }
 
 html {
 	width: 100%;
 	height: 100%;
 	font-size: 16px;
+	box-sizing: border-box;
+}
+
+*, *:before, *:after {
+	box-sizing: inherit;
 }
 
 body {
@@ -59,17 +63,9 @@ body {
 }
 
 ul {
-	padding: 0;
-	margin: 0;
-
 	li {
 		list-style: none;
 	}
-}
-
-p {
-	padding: 0;
-	margin: 0;
 }
 
 a {
