--- a/Natalya Kuznetsova/flex/style.css
+++ b/Natalya Kuznetsova/flex/style.css
@@ -20,6 +20,10 @@ html {
   font-size: 14px;
 }
 
+@media screen and (max-width: 335px) {
+  html {font-size: 12px;}
+}
+
 .weather {
   margin: 0 auto;
   padding: 80px 0 55px 0;
@@ -28,12 +32,24 @@ html {
   background-image: radial-gradient(at top, rgba(255,255,255,0.15) 0%,rgba(255,255,255,0) 50%);
 }
 
+@media screen and (max-width: 800px) {
+  .weather {width: 100%;}
+}
+
+@media screen and (max-height: 560px) {
+  .weather {padding: 10px 0;}
+}
+
 .widget {
   margin: 0 auto;
   width: 390px;
   background-color: rgba(0,0,0,0);
   border-radius: 15px;
   box-shadow: 0 21px 21px 4px rgba(0, 0, 0, 0.15), 0 0 10px rgba(0,0,0, 0.07);
+}
+
+@media screen and (max-width: 390px) {
+  .widget {width: 100%;}
 }
 
 .weather_info::before {
@@ -63,7 +79,12 @@ html {
   margin: 50px 0 30px 0;
 }
 
-.weather_info ul {
+@media screen and (max-height: 450px)  {
+  .weather_info {padding: 0;}
+  .weather_info img {margin: 0;}
+}
+
+.weather_info_list {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -72,7 +93,7 @@ html {
   width: 100%;
 }
 
-.weather_info ul li:first-child {
+.weather_info_list .degree {
   padding-left: 20px;
   padding-right: 0;
   font-family: 'Proxima Nova Light', 'Open Sans', sans-serif;
@@ -82,21 +103,25 @@ html {
   color: #8d9396;
 }
 
-.weather_info ul li:nth-child(2) {
+@media screen and (max-height: 450px)  {
+  .weather_info_list .degree {padding-bottom: 0;}
+}
+
+.weather_info_list .city {
   flex-basis: 50%;
   padding-left: 0;
   white-space: nowrap;
 }
 
-.weather_info ul li:last-child {
+.weather_info_list .date {
   padding: 15px 20px;
 }
 
-.weather_info ul li span {
+.weather_info .info {
   display: block;
 }
 
-.weather_info ul li:nth-child(2) span {
+.weather_info_list .city_info {
   font-family: 'Source Sans Pro', 'Source Sans Pro Light',  sans-serif;
   font-size: 1.71rem;
   font-weight: 300;
@@ -104,7 +129,7 @@ html {
   color: #bac2c6;
 }
 
-.weather_info ul li:nth-child(2) span:last-child {
+.weather_info_list #city {
   font-family: 'Source Sans Pro', 'Source Sans Pro Semibold', sans-serif;
   font-size: 1.143rem;
   font-weight: 600;
@@ -112,11 +137,11 @@ html {
   color: #a2a9ad;
 }
 
-.weather_info ul li:nth-child(3) {
+.weather_info_list .date {
   background-color: #54bae6;
 }
 
-.weather_info ul li:nth-child(3) span {
+.weather_info_list .date_info {
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   font-weight: bold;
@@ -126,7 +151,7 @@ html {
   line-height: 22px;
 }
 
-.weather_info ul li:nth-child(3) span:last-child {
+.weather_info_list #day {
   font-size: 1.286rem;
 }
 
@@ -147,6 +172,10 @@ html {
   padding: 20px 0 15px 0;
 }
 
+@media screen and (max-height: 450px)  {
+  .weather_params ul {padding: 10px 0;}
+}
+
 .weather_params ul li {
   display: flex;
   flex-direction: row;
@@ -154,7 +183,7 @@ html {
   align-items: center;
 }
 
-.weather_params ul:first-child {
+.weather_params .weather_params_list {
   margin: 0;
   padding-top: 40px;
   width: 100%;
@@ -164,12 +193,16 @@ html {
   color: #fff;
 }
 
-.weather_params ul:first-child span{
+@media screen and (max-height: 450px)  {
+  .weather_params_list {padding-top: 15px;}
+}
+
+.weather_params_list span{
   padding-left: 20px;
 }
 
 
-.weather_params ul:last-child li {
+.weather_params_pagination li {
   margin-right: 5px;
   width: 5px;
   height: 5px;
@@ -177,31 +210,7 @@ html {
   border: 2px solid #44494a;
 }
 
-.weather_params ul:last-child li#active {
+.weather_params_pagination #active {
   background-color: #fff;
   border: 2px solid #fff;
-}
-
-@media screen and (max-width: 800px) {
-  .weather {width: 100%;}
-}
-
-@media screen and (max-width: 390px) {
-  .widget {width: 100%;}
-}
-
-@media screen and (max-width: 335px) {
-  html {font-size: 12px;}
-}
-
-@media screen and (max-height: 560px) {
-  .weather {padding: 10px 0;}
-}
-
-@media screen and (max-height: 450px)  {
-  .weather_info {padding: 0;}
-  .weather_info img {margin: 0;}
-  .weather_info ul li:first-child {padding-bottom: 0;}
-  .weather_params ul {padding: 10px 0;}
-  .weather_params ul:first-child {padding-top: 15px;}
 }
