--- a/Natalya Kuznetsova/grid/style.css
+++ b/Natalya Kuznetsova/grid/style.css
@@ -21,6 +21,12 @@ html {
   background-color: #4e5860;
   background-image: radial-gradient(at top, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0) 50%); }
 
+@media screen and (max-width: 800px) {
+  .weather {
+    width: 100%; } }
+@media screen and (max-height: 560px) {
+  .weather {
+    padding: 10px 0; } }
 .widget {
   display: grid;
   grid-template-rows: 70% 30%;
@@ -52,35 +58,36 @@ html {
       margin-top: 12%;
       width: 140px;
       height: auto; }
-    .widget__weather_info__list {
+    .widget__weather_info .weather_info_list {
       display: grid;
       grid-template-columns: 25% 55% 20%;
       align-items: center;
       width: 100%;
       padding-top: 10%; }
-      .widget__weather_info__list__list_item__gedree {
+      .widget__weather_info .weather_info_list__list_item_gedree {
         font-family: 'Proxima Nova Light', 'Open Sans', sans-serif;
         font-size: 4.1rem;
         font-weight: 300;
         text-align: right;
         color: #8d9396; }
-      .widget__weather_info__list__list_item__city {
+      .widget__weather_info .weather_info_list__list_item_city {
         display: grid;
         grid-template-rows: 50% 50%;
         padding-left: 5%; }
-        .widget__weather_info__list__list_item__city__sky {
-          font-family: 'Source Sans Pro', 'Source Sans Pro Light',  sans-serif;
-          font-size: 1.71rem;
-          font-weight: 300;
-          text-align: left;
-          color: #bac2c6; }
-        .widget__weather_info__list__list_item__city__name {
-          font-family: 'Source Sans Pro', 'Source Sans Pro Semibold', sans-serif;
-          font-size: 1.143rem;
-          font-weight: 600;
-          text-align: left;
-          color: #a2a9ad; }
-      .widget__weather_info__list__list_item__date {
+      .widget__weather_info .weather_info_list__sky {
+        font-family: 'Source Sans Pro', 'Source Sans Pro Light',  sans-serif;
+        font-size: 1.71rem;
+        font-weight: 300;
+        text-align: left;
+        color: #bac2c6; }
+      .widget__weather_info .weather_info_list__name {
+        align-self: end;
+        font-family: 'Source Sans Pro', 'Source Sans Pro Semibold', sans-serif;
+        font-size: 1.143rem;
+        font-weight: 600;
+        text-align: left;
+        color: #a2a9ad; }
+      .widget__weather_info .weather_info_list__list_item_date {
         display: grid;
         grid-template-rows: 50% 50%;
         height: 100%;
@@ -92,10 +99,10 @@ html {
         color: #FFF;
         text-transform: uppercase;
         line-height: 22px; }
-        .widget__weather_info__list__list_item__date__month {
-          align-self: end; }
-        .widget__weather_info__list__list_item__date__day {
-          font-size: 1.286rem; }
+      .widget__weather_info .weather_info_list__month {
+        align-self: end; }
+      .widget__weather_info .weather_info_list__day {
+        font-size: 1.286rem; }
   .widget__weather_params {
     display: grid;
     grid-template-rows: 50% 50%;
@@ -103,43 +110,36 @@ html {
     background-color: #2e3335;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px; }
-    .widget__weather_params__params_list {
+    .widget__weather_params .weather_params_list {
       display: grid;
       grid-template-columns: 33.333% 33.333% 33.333%;
       justify-items: center; }
-      .widget__weather_params__params_list__params_item {
+      .widget__weather_params .weather_params_list__params_item {
         display: grid;
         grid-template-columns: 50% 50%;
         align-items: center; }
-        .widget__weather_params__params_list__params_item:first-child {
+        .widget__weather_params .weather_params_list__params_item:first-child {
           justify-self: end; }
-        .widget__weather_params__params_list__params_item:last-child {
+        .widget__weather_params .weather_params_list__params_item:last-child {
           justify-self: start; }
-        .widget__weather_params__params_list__params_item__wind_value, .widget__weather_params__params_list__params_item__wet_value, .widget__weather_params__params_list__params_item__sun_value {
-          padding-left: 20%;
-          font-family: 'Proxima Nova', sans-serif;
-          font-size: 1rem;
-          font-weight: bold;
-          color: #fff; }
-    .widget__weather_params__params_pagination {
+      .widget__weather_params .weather_params_list__wind_value, .widget__weather_params .weather_params_list__wet_value, .widget__weather_params .weather_params_list__sun_value {
+        padding-left: 20%;
+        font-family: 'Proxima Nova', sans-serif;
+        font-size: 1rem;
+        font-weight: bold;
+        color: #fff; }
+    .widget__weather_params .weather_params_pagination {
       display: grid;
       grid-template-columns: 4% 4% 4%;
       justify-content: center;
       padding: 5% 0; }
-      .widget__weather_params__params_pagination__item {
+      .widget__weather_params .weather_params_pagination__item {
         width: 5px;
         height: 5px;
         border-radius: 5px;
         border: 2px solid #44494a; }
-        .widget__weather_params__params_pagination__item--active {
+        .widget__weather_params .weather_params_pagination__item--active {
           background-color: #fff;
           border: 2px solid #fff; }
-
-@media screen and (max-width: 800px) {
-  .weather {
-    width: 100%; } }
-@media screen and (max-height: 560px) {
-  .weather {
-    padding: 10px 0; } }
 
 /*# sourceMappingURL=style.css.map */
