--- a/Grid/css/style.css
+++ b/Grid/css/style.css
@@ -8,7 +8,6 @@ body {
   font-family: "Lato", sans-serif;
   color: white;
   background: url("../images/bg.png");
-  background-repeat: no-repeat;
   background-size: cover;
 }
 
@@ -24,8 +23,6 @@ li {
 
 body {
   display: grid;
-  justify-items: center;
-  align-items: center;
 }
 
 .weather-widget {
@@ -33,6 +30,8 @@ body {
   background: url(../images/Paris.png);
   background-repeat: no-repeat;
   display: grid;
+  justify-self: center;
+  align-self: center;
   grid-template: repeat(2, 162px) 112px/repeat(3, 1fr);
 }
 .weather-widget__list-day {
@@ -83,14 +82,20 @@ body {
   grid-column: 1/-1;
   display: grid;
   grid-auto-flow: column;
-  align-items: center;
-  justify-items: center;
+  align-self: center;
+}
+.weather-nav__button-wrap {
+  justify-self: center;
+  align-self: center;
 }
 .weather-nav__item-nav {
   width: 100%;
   display: grid;
-  justify-items: center;
   border-right: 1px solid white;
+}
+.weather-nav__item-nav span, .weather-nav__item-nav img {
+  align-self: center;
+  justify-self: center;
 }
 .weather-nav li:nth-child(5) {
   border: 0;
@@ -178,21 +183,22 @@ body {
   }
 }
 @media screen and (max-width: 700px) {
+  html {
+    min-width: 250px;
+  }
+
   .weather-widget {
     height: 100%;
     width: 100%;
     background: url(../images/Paris.png);
     background-repeat: no-repeat;
     background-size: cover;
-    grid-template: repeat(2, 38%) 24%/repeat(3, minmax(150px, 1fr));
+    grid-template: repeat(2, 38%) 24%/repeat(3, 1fr);
   }
   .weather-widget__wrapper {
     grid-column: 1/3;
   }
 
-  .weather-nav__item-nav {
-    height: 65%;
-  }
   .weather-nav li:nth-last-child(3) {
     border: 0;
   }
