--- a/Varvara Belitskaia/float/style_float.css
+++ b/Varvara Belitskaia/float/style_float.css
@@ -21,15 +21,21 @@ body {
     width: 20%;
     min-width: 389px; 
     height: 464px;
-    background-color: #f1f8f9;
     border-radius: 10px 10px 15px 15px;
     box-shadow: 0px 21px 20.16px 0.84px rgba(0, 0, 0, 0.15);
     margin: 50px auto 0;
 }
 
+.main {
+    background-color: #f1f8f9;
+    border-radius: 10px 10px 0 0;
+    width: 100%;
+    height: 70.5%;
+}
+
 .weather-image-container {
     width: 100%;
-    height: 52%;
+    height: 73.76%;
     float: left;
     position: relative;
 }
@@ -51,7 +57,7 @@ body {
 
 .current {    
     width: 100%;
-    height: 18.5%;
+    height: 26.24%;
     float: left;
 }
 
@@ -72,7 +78,7 @@ body {
 }
 
 .temperature-value::after {
-    content: ' O';
+    content: ' O';
     font-family: proxima-nova, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -203,6 +209,11 @@ footer {
         min-width: 300px; 
         height: 328px;
         border-radius: 10px;
+    }
+
+    .main {
+        border-radius: 10px;
+        height: 100%;
     }
 
     .weather-image-container {
